web/ + attr if attr else }')
    except Exception as e:
        all_ok = False
        print(f'  ❌ {mod_name}: {e}')

if all_ok:
    print('\n  ✅ ALL IMPORTS OK - Vercel crash must be environment-related')

  File "<string>", line 48
    print(f'  ✅ {mod_name}{
                          ^
SyntaxError: '{' was never closed
